Bugfix: squire wysiwyg had no overflow scrollbar

--- a/dev/Styles/SquireUI.less
+++ b/dev/Styles/SquireUI.less
@@ -33,6 +33,10 @@
 	width: 4em;
 }
 
+.squire-wysiwyg {
+	overflow: auto;
+}
+
 .squire-wysiwyg, .squire-plain {
 	min-height: 200px;
 	padding: .5em;
